Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 5.0.0
-
Fix Version/s: 5.0.0 Beta 1
-
Component/s: ActiveX Support
-
Labels:
-
Environment:Windows 7 64bit msvc 2010
-
Commits:7395490c6a2ee761bba14de1dbfed0a94d287c18
Description
In the past QPainter::redirected() has been used to detect screengrabs in QAxHostWidget::paintEvent(), but in Qt5 redirection is obsoleted and the function in question is hardcoded to return 0. A new mechanism is needed to detect when painting is done via render.
Attachments
Issue Links
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-