Fix rendering of QAxWidgets

QPainter::redirected() has been obsoleted, so it cannot be used for
differentiating between QWidget::render() and regular painting anymore.
However, QWidget::redirected() still works, and there is no indication
it has been deprecated or obsoleted, so changed QAxWidget to use that.

Task-number: QTBUG-26323
Change-Id: I4fd9533dba7f8d4f14c866cca59dbeca47b8cee8
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>